major inital work

--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-PAGE TEST!
+<head>
+    <title>CRIMSON CITY - Cardiff Indie Rock Band</title>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Crimson City Band Website">
+    <meta name="keywords" content="Band, Cardiff, Rock Band">
+    <meta name="author" content="James Kapella">
+    <link href="resources/styles.css" rel="stylesheet">
+
+</head>
+<body>
+    <div class="main">
+        <h1>CRIMSON CITY</h1>
+        <ul class="horizontal-list-nav">
+            <li>
+                <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><img class="icons" src = "resources/icons/instagram.svg" alt="instagram icon"/></a>
+            </li>
+            <li>
+                <a target="_blank" href=""><img class="icons" src = "resources/icons/youtube.svg" alt="youtube icon"/></a>
+            </li>
+            <li>
+                <a target="_blank" href=""><img class="icons" src = "resources/icons/spotify.svg" alt="spotify icon"/></a>
+            </li>
+            <li>
+                <a target="_blank" href=""><img class="icons" src = "resources/icons/gmail.svg" alt="gmail icon"/></a>
+            </li>
+        </ul>
+        <img class="mainphoto" src="resources/pics/band.jpg" alt="">
+        <ul class="horizontal-list-pages">
+            <li>
+                <a class="page-link" href="">MAIN</a>
+            </li>
+            <li>
+                <a class="page-link" href="">UPDATES/BLOG</a>
+            </li>
+        </ul>
+        <h2>BIOGRAPHY</h2>
+        <p>Crimson City are a Rock band from Cardiff, who play upbeat music about having a bad time.</p>
+        <h2>CONTACT & LINKS</h2>
+        <p><strong>PRESS KIT DOWNLOAD:</strong> Add press kit download here</p>
+        <p><strong>EMAIL:</strong> crimsoncitycardiff@gmail.com</p>
+        <p><strong>INSTAGRAM:</strong> <a target="_blank" href="https://www.instagram.com/crimsoncityband/">https://www.instagram.com/crimsoncityband/</a></p>
+        <h2>MUSIC</h2>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/dN1hxBELC5E?si=-id9-fXuz6j-kkG7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WXJ_HDxkyQA?si=aehZGYbi0PfR5JVa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
+        </div>     
+            <h2>LIVE</h2>
+        <p>More shows soon...</p>
+        <h2>THE BAND</h2>
+        <div class="member-bio">
+            <div class="portrait-container-james"></div>
+            <div class="bio-container">
+                <h3>James Kapella</h3> 
+                <p>James has been in bands you’ve never heard of for the last 20 years.</p>
+                <p>He lives in Cardiff and writes songs influenced by disgusting heavy metal, youtube videos about synthesizers, trying to love the world around you even when it’s hard, horror manga, baths that are slightly too hot, deeply uncool Prog Rock, dead musicians, birds, and being too dumb to quit.</p>    
+            </div>
+        </div>
+        <div class="member-bio">
+            <div class="portrait-container-shaun"></div>
+            <div class="bio-container">
+                <h3>Shaun McHugh</h3>
+                <p>Shaun cut his teeth on the pub toilet circuit, playing noisy free-form rock at anyone who would listen. He lives in Cardiff and has a real job, but he’d rather not. Inspired by anything that gives him the shivers, stealing ideas from King Gizzard, Hendrix, Tony TS McPhee, and Guthrie Govan. Definitely not addicted to buying guitar pedals.</p> 
+            </div>
+        </div>
+        <div class="member-bio">
+            <div class="portrait-container-elle"></div>
+            <div class="bio-container">
+                <h3>Elle Barker</h3>
+                <p>Elle Words</p> 
+            </div>
+        </div>
+        <div class="member-bio">
+            <div class="portrait-container-harry"></div>
+            <div class="bio-container">
+                <h3>Harry Greenway</h3>
+                <p>Harry likes drums</p> 
+            </div>
+        </div>
+        <h2>UPDATES</h2>
+        <div>
+            <h3>2023/09/06 - Live at The Moon</h3>
+            <p>We played a show...</p>
+        </div>
+    </div>
+</body>
