updates to wording, styles, etc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <title>CRIMSON CITY - Cardiff Indie Rock Band</title>
+    <title>CRIMSON CITY - Cardiff Indie Rock Country Punk Band</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="Crimson City Band Website">
@@ -26,16 +26,9 @@
             </li>
         </ul>
         <img class="mainphoto" src="resources/pics/band.jpg" alt="">
-        <ul class="horizontal-list-pages">
-            <li>
-                <a class="page-link" href="">MAIN</a>
-            </li>
-            <li>
-                <a class="page-link" href="">UPDATES/BLOG</a>
-            </li>
-        </ul>
         <h2>BIOGRAPHY</h2>
-        <p>Crimson City are a Rock band from Cardiff, who play upbeat music about having a bad time.</p>
+        <p>Crimson City play upbeat music about having a bad time. Mixing the gritty country flecked rock of early R.E.M, the heartfelt feelings and sardonic humour of The Mountain Goats, the surreal sweaty punk of Pixies: Crimson City blend these powerful influences into something truly compelling and original.</p>
+        <p>Currently working on recording their first single, a double A-side with songs about becoming a dark lord to spite your worthless enemies, and having someone who loves you even when you feel like you don’t deserve it.</p>
         <h2>CONTACT & LINKS</h2>
         <p><strong>PRESS KIT DOWNLOAD:</strong> Add press kit download here</p>
         <p><strong>EMAIL:</strong> crimsoncitycardiff@gmail.com</p>
@@ -69,14 +62,14 @@
             <div class="portrait-container-elle"></div>
             <div class="bio-container">
                 <h3>Elle Barker</h3>
-                <p>Elle Words</p> 
+                <p>Elle has been in and around the UK DIY music scene for the last ten years, mostly playing in noise and punk bands. She plays bass in Crimson City and is also a member of Sherbet Flies and A Lack of North. Her main influences as a bassist are Kim Deal, Mike Watt, Tina Weymouth, and Paul McCartney.</p> 
             </div>
         </div>
         <div class="member-bio">
             <div class="portrait-container-harry"></div>
             <div class="bio-container">
                 <h3>Harry Greenway</h3>
-                <p>Harry likes drums</p> 
+                <p>Harry plays drums and percussion in Crimson City, having come from a background of performing in bands, orchestras and ensembles. He has a masters in Percussion from RWCMD and takes influence from a mixture of prog rock, jazz and dance music. </p> 
             </div>
         </div>
         <h2>UPDATES</h2>
