adding mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -6,39 +6,40 @@
     <meta name="keywords" content="Band, Cardiff, Rock Band">
     <meta name="author" content="James Kapella">
     <link href="resources/styles.css" rel="stylesheet">
+    <link rel="icon" href="resources/icons/cassette.png">
 
 </head>
 <body>
     <div class="main">
         <h1>CRIMSON CITY</h1>
+        <img class="mainphoto" src="resources/pics/band.jpg" alt="">
         <ul class="horizontal-list-nav">
             <li>
                 <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><img class="icons" src = "resources/icons/instagram.svg" alt="instagram icon"/></a>
             </li>
             <li>
-                <a target="_blank" href=""><img class="icons" src = "resources/icons/youtube.svg" alt="youtube icon"/></a>
+                <a target="_blank" href="https://www.youtube.com/@crimsoncityband/featured"><img class="icons" src = "resources/icons/youtube.svg" alt="youtube icon"/></a>
             </li>
-            <li>
+            <!-- <li>
                 <a target="_blank" href=""><img class="icons" src = "resources/icons/spotify.svg" alt="spotify icon"/></a>
-            </li>
+            </li> -->
             <li>
-                <a target="_blank" href=""><img class="icons" src = "resources/icons/gmail.svg" alt="gmail icon"/></a>
+                <a target="_blank" href="mailto:crimsoncitycardiff@gmail.com"><img class="icons" src = "resources/icons/gmail.svg" alt="gmail icon"/></a>
             </li>
         </ul>
-        <img class="mainphoto" src="resources/pics/band.jpg" alt="">
         <h2>BIOGRAPHY</h2>
         <p>Crimson City play upbeat music about having a bad time. Mixing the gritty country flecked rock of early R.E.M, the heartfelt feelings and sardonic humour of The Mountain Goats, the surreal sweaty punk of Pixies: Crimson City blend these powerful influences into something truly compelling and original.</p>
         <p>Currently working on recording their first single, a double A-side with songs about becoming a dark lord to spite your worthless enemies, and having someone who loves you even when you feel like you don’t deserve it.</p>
         <h2>CONTACT & LINKS</h2>
-        <p><strong>PRESS KIT DOWNLOAD:</strong> Add press kit download here</p>
-        <p><strong>EMAIL:</strong> crimsoncitycardiff@gmail.com</p>
-        <p><strong>INSTAGRAM:</strong> <a target="_blank" href="https://www.instagram.com/crimsoncityband/">https://www.instagram.com/crimsoncityband/</a></p>
+        <p><strong>PRESS KIT DOWNLOAD:</strong> <a target="_blank" href="https://drive.google.com/drive/folders/19afCL8MtCNKXzpuEi3cim_JflqOBzTWL?usp=sharing"><u>Crimson City Press Kit</u></a></p>
+        <p><strong>EMAIL:</strong> <u>crimsoncitycardiff@gmail.com</u></p>
+        <p><strong>INSTAGRAM:</strong> <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><u>https://www.instagram.com/crimsoncityband/</u></a></p>
         <h2>MUSIC</h2>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/dN1hxBELC5E?si=-id9-fXuz6j-kkG7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="840" height="473" src="https://www.youtube.com/embed/dN1hxBELC5E?si=-id9-fXuz6j-kkG7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/WXJ_HDxkyQA?si=aehZGYbi0PfR5JVa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
+            <iframe width="840" height="473" src="https://www.youtube.com/embed/WXJ_HDxkyQA?si=aehZGYbi0PfR5JVa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
         </div>     
             <h2>LIVE</h2>
         <p>More shows soon...</p>
@@ -72,10 +73,10 @@
                 <p>Harry plays drums and percussion in Crimson City, having come from a background of performing in bands, orchestras and ensembles. He has a masters in Percussion from RWCMD and takes influence from a mixture of prog rock, jazz and dance music. </p> 
             </div>
         </div>
-        <h2>UPDATES</h2>
+        <!-- <h2>UPDATES</h2>
         <div>
             <h3>2023/09/06 - Live at The Moon</h3>
             <p>We played a show...</p>
-        </div>
+        </div> -->
     </div>
 </body>
