nice finishing things off for this pass

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <h1>CRIMSON CITY</h1>
-        <img class="mainphoto" src="resources/pics/band.jpg" alt="">
+        <img class="mainphoto" src="resources/pics/band.png" alt="">
         <ul class="horizontal-list-nav">
             <li>
                 <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><img class="icons" src = "resources/icons/instagram.svg" alt="instagram icon"/></a>
