--- a/index.html
+++ b/index.html
@@ -1,82 +1,114 @@
-<head>
-    <title>CRIMSON CITY - Cardiff Indie Rock Country Punk Band</title>
-
-    <meta charset="UTF-8">
-    <meta name="description" content="Crimson City Band Website">
-    <meta name="keywords" content="Band, Cardiff, Rock Band">
-    <meta name="author" content="James Kapella">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="resources/styles.css" rel="stylesheet">
-    <link rel="icon" href="resources/icons/cassette.png">
-
-</head>
-<body>
-    <div class="main">
-        <h1>CRIMSON CITY</h1>
-        <img class="mainphoto" src="resources/pics/band.png" alt="">
-        <ul class="horizontal-list-nav">
-            <li>
-                <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><img class="icons" src = "resources/icons/instagram.svg" alt="instagram icon"/></a>
-            </li>
-            <li>
-                <a target="_blank" href="https://www.youtube.com/@crimsoncityband/featured"><img class="icons" src = "resources/icons/youtube.svg" alt="youtube icon"/></a>
-            </li>
-            <!-- <li>
-                <a target="_blank" href=""><img class="icons" src = "resources/icons/spotify.svg" alt="spotify icon"/></a>
-            </li> -->
-            <li>
-                <a target="_blank" href="mailto:crimsoncitycardiff@gmail.com"><img class="icons" src = "resources/icons/gmail.svg" alt="gmail icon"/></a>
-            </li>
-        </ul>
-        <h2>BIOGRAPHY</h2>
-        <p>Crimson City play upbeat music about having a bad time. Mixing the gritty country flecked rock of early R.E.M, the heartfelt feelings and sardonic humour of The Mountain Goats, the surreal sweaty punk of Pixies: Crimson City blend these powerful influences into something truly compelling and original.</p>
-        <p>Currently working on recording their first single, a double A-side with songs about becoming a dark lord to spite your worthless enemies, and having someone who loves you even when you feel like you don’t deserve it.</p>
-        <h2>CONTACT & LINKS</h2>
-        <p><strong>PRESS KIT DOWNLOAD:</strong> <a target="_blank" href="https://drive.google.com/drive/folders/19afCL8MtCNKXzpuEi3cim_JflqOBzTWL?usp=sharing"><u>Crimson City Press Kit</u></a></p>
-        <p><strong>EMAIL:</strong> <u>crimsoncitycardiff@gmail.com</u></p>
-        <p><strong>INSTAGRAM:</strong> <a target="_blank" href="https://www.instagram.com/crimsoncityband/"><u>https://www.instagram.com/crimsoncityband/</u></a></p>
-        <h2>MUSIC</h2>
-        <div>
-            <iframe width="840" height="473" src="https://www.youtube.com/embed/dN1hxBELC5E?si=-id9-fXuz6j-kkG7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-        <div>
-            <iframe width="840" height="473" src="https://www.youtube.com/embed/WXJ_HDxkyQA?si=aehZGYbi0PfR5JVa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
-        </div>     
-            <h2>LIVE</h2>
-        <p>More shows soon...</p>
-        <h2>THE BAND</h2>
-        <div class="member-bio">
-            <div class="portrait-container-james"></div>
-            <div class="bio-container">
-                <h3>James Kapella</h3> 
-                <p>James has been in bands you’ve never heard of for the last 20 years.</p>
-                <p>He lives in Cardiff and writes songs influenced by disgusting heavy metal, youtube videos about synthesizers, trying to love the world around you even when it’s hard, horror manga, baths that are slightly too hot, deeply uncool Prog Rock, dead musicians, birds, and being too dumb to quit.</p>    
-            </div>
-        </div>
-        <div class="member-bio">
-            <div class="portrait-container-shaun"></div>
-            <div class="bio-container">
-                <h3>Shaun McHugh</h3>
-                <p>Shaun cut his teeth on the pub toilet circuit, playing noisy free-form rock at anyone who would listen. He lives in Cardiff and has a real job, but he’d rather not. Inspired by anything that gives him the shivers, stealing ideas from King Gizzard, Hendrix, Tony TS McPhee, and Guthrie Govan. Definitely not addicted to buying guitar pedals.</p> 
-            </div>
-        </div>
-        <div class="member-bio">
-            <div class="portrait-container-elle"></div>
-            <div class="bio-container">
-                <h3>Elle Barker</h3>
-                <p>Elle has been in and around the UK DIY music scene for the last ten years, mostly playing in noise and punk bands. She plays bass in Crimson City and is also a member of Sherbet Flies and A Lack of North. Her main influences as a bassist are Kim Deal, Mike Watt, Tina Weymouth, and Paul McCartney.</p> 
-            </div>
-        </div>
-        <div class="member-bio">
-            <div class="portrait-container-harry"></div>
-            <div class="bio-container">
-                <h3>Harry Greenway</h3>
-                <p>Harry plays drums and percussion in Crimson City, having come from a background of performing in bands, orchestras and ensembles. He has a masters in Percussion from RWCMD and takes influence from a mixture of prog rock, jazz and dance music. </p> 
-            </div>
-        </div>
-        <!-- <h2>UPDATES</h2>
-        <div>
-            <h3>2023/09/06 - Live at The Moon</h3>
-            <p>We played a show...</p>
-        </div> -->
+  </head>
+  <body>
+    
+    <div class="container mt-5">
+      <h1 class="display-2 display-lg-1 title">CRIMSON CITY</h1>
     </div>
-</body>
+    <div class="container mt-3">
+        <div class="d-flex flex-wrap align-items-center justify-content-center">
+          <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+                  viewBox="0 0 512 512"  xml:space="preserve">
+               <g>
+                 <path d="M421.073,221.719c-0.578,11.719-9.469,26.188-23.797,40.094v183.25c-0.016,4.719-1.875,8.719-5.016,11.844
+                   c-3.156,3.063-7.25,4.875-12.063,4.906H81.558c-4.781-0.031-8.891-1.844-12.047-4.906c-3.141-3.125-4.984-7.125-5-11.844V152.219
+                   c0.016-4.703,1.859-8.719,5-11.844c3.156-3.063,7.266-4.875,12.047-4.906h158.609c12.828-16.844,27.781-34.094,44.719-49.906
+                   c0.078-0.094,0.141-0.188,0.219-0.281H81.558c-18.75-0.016-35.984,7.531-48.25,19.594c-12.328,12.063-20.016,28.938-20,47.344
+                   v292.844c-0.016,18.406,7.672,35.313,20,47.344C45.573,504.469,62.808,512,81.558,512h298.641c18.781,0,36.016-7.531,48.281-19.594
+                   c12.297-12.031,20-28.938,19.984-47.344V203.469c0,0-0.125-0.156-0.328-0.313C440.37,209.813,431.323,216.156,421.073,221.719z"/>
+                 <path d="M498.058,0c0,0-15.688,23.438-118.156,58.109C275.417,93.469,211.104,237.313,211.104,237.313
+                   c-15.484,29.469-76.688,151.906-76.688,151.906c-16.859,31.625,14.031,50.313,32.156,17.656
+                   c34.734-62.688,57.156-119.969,109.969-121.594c77.047-2.375,129.734-69.656,113.156-66.531c-21.813,9.5-69.906,0.719-41.578-3.656
+                   c68-5.453,109.906-56.563,96.25-60.031c-24.109,9.281-46.594,0.469-51-2.188C513.386,138.281,498.058,0,498.058,0z"/>
+               </g>
+               </svg>              
+                NEWS
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.233 5.488c-.843-.038-1.097-.046-3.233-.046s-2.389.008-3.232.046c-2.17.099-3.181 1.127-3.279 3.279-.039.844-.048 1.097-.048 3.233s.009 2.389.047 3.233c.099 2.148 1.106 3.18 3.279 3.279.843.038 1.097.047 3.233.047 2.137 0 2.39-.008 3.233-.046 2.17-.099 3.18-1.129 3.279-3.279.038-.844.046-1.097.046-3.233s-.008-2.389-.046-3.232c-.099-2.153-1.111-3.182-3.279-3.281zm-3.233 10.62c-2.269 0-4.108-1.839-4.108-4.108 0-2.269 1.84-4.108 4.108-4.108s4.108 1.839 4.108 4.108c0 2.269-1.839 4.108-4.108 4.108zm4.271-7.418c-.53 0-.96-.43-.96-.96s.43-.96.96-.96.96.43.96.96-.43.96-.96.96zm-1.604 3.31c0 1.473-1.194 2.667-2.667 2.667s-2.667-1.194-2.667-2.667c0-1.473 1.194-2.667 2.667-2.667s2.667 1.194 2.667 2.667zm4.333-12h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm.952 15.298c-.132 2.909-1.751 4.521-4.653 4.654-.854.039-1.126.048-3.299.048s-2.444-.009-3.298-.048c-2.908-.133-4.52-1.748-4.654-4.654-.039-.853-.048-1.125-.048-3.298 0-2.172.009-2.445.048-3.298.134-2.908 1.748-4.521 4.654-4.653.854-.04 1.125-.049 3.298-.049s2.445.009 3.299.048c2.908.133 4.523 1.751 4.653 4.653.039.854.048 1.127.048 3.299 0 2.173-.009 2.445-.048 3.298z"/></svg>
+                    INSTAGRAM
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd">
+                    <path d="M10 9.333l5.333 2.662-5.333 2.672v-5.334zm14-4.333v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5zm-4 7c-.02-4.123-.323-5.7-2.923-5.877-2.403-.164-7.754-.163-10.153 0-2.598.177-2.904 1.747-2.924 5.877.02 4.123.323 5.7 2.923 5.877 2.399.163 7.75.164 10.153 0 2.598-.177 2.904-1.747 2.924-5.877z"/></svg>                  </svg>                  
+                  YOUTUBE
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd"><path d="M19 0c2.762 0 5 2.239 5 5v14c0 2.761-2.238 5-5 5h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14zm-7 4c-4.418 0-8 3.582-8 8 0 4.419 3.582 8 8 8s8-3.581 8-8c0-4.418-3.582-8-8-8zm3.669 11.539c-.144.236-.451.31-.686.166-1.878-1.148-4.243-1.408-7.028-.772-.268.062-.535-.106-.597-.375-.061-.268.106-.535.375-.596 3.048-.697 5.662-.397 7.771.891.235.144.309.451.165.686zm.979-2.178c-.181.293-.565.385-.858.205-2.15-1.322-5.428-1.704-7.972-.932-.33.099-.678-.087-.778-.416-.1-.33.086-.677.416-.778 2.905-.881 6.517-.454 8.987 1.063.293.181.385.565.205.858zm.084-2.269c-2.578-1.531-6.832-1.672-9.294-.925-.395.12-.813-.103-.933-.498-.12-.396.103-.814.499-.934 2.826-.858 7.523-.692 10.492 1.07.356.211.472.671.262 1.026-.211.355-.671.472-1.026.261z"/></svg>                  
+                  SPOTIFY
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1"
+                  viewBox="0 0 97.75 97.75" xml:space="preserve"
+                  xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">	<path d="M48.875,0C21.882,0,0,21.882,0,48.875S21.882,97.75,48.875,97.75S97.75,75.868,97.75,48.875S75.868,0,48.875,0z
+                    M64.835,70.857H12.593l20.32-43.965h52.244L64.835,70.857z"/></svg>                               
+                  BANDCAMP
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-red">
+                  <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd">
+                    <path d="M19 24h-14c-2.761 0-5-2.239-5-5v-14c0-2.761 2.239-5 5-5h14c2.762 0 5 2.239 5 5v14c0 2.761-2.238 5-5 5zm-.141-6.333c.63 0 1.141-.512 1.141-1.142v-9.05c0-.63-.511-1.142-1.141-1.142h-13.718c-.63 0-1.141.512-1.141 1.142v9.05c0 .63.511 1.142 1.141 1.142h13.718zm-6.859-4.058l-6.228-4.321-.014 7.712h12.457v-7.712l-6.215 4.321zm5.913-6.609c-1.745 1.215-5.913 4.153-5.913 4.153l-5.947-4.153h11.86z"/>
+                  </svg>                  
+                  EMAIL
+                </a>
+              </li>
+          </ul>
+        </div>
+      </div>
+    <div class="container mt-3">
+        <div class="row">
+          <div class="col-12 col-xl-10 mx-auto">
+            <img src="./resources/pics/band_group.jpg" class="img-fluid" alt="A picture of the band">
+        </div>
+        </div>
+      </div>
+    <div class="container mt-4">
+        <div class="row">
+          <div class="col-0 col-lg-1">
+          </div>
+          <div class="col-12 col-lg-5">
+            <h2 class="border-bottom pb-1 red-border mb-4">MUSIC</h4>
+            <h4 class="mb-4 mt-4">Queen Foul, Our latest single:</h4>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3uOpAR7noJmVH3wFBN8vQU?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=148368372/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://crimsoncity.bandcamp.com/track/queen-foul">Queen Foul by Crimson City</a></iframe>
+            <h4 class="mb-4 mt-s">Revenant King:</h4>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/59iZLyONEGjy3Zgp4RvpVH?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=1508596153/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://crimsoncity.bandcamp.com/track/revenant-king">Revenant King by Crimson City</a></iframe>
+          </div>
+          <div class="col-12 col-lg-5">
+            <h2 h2 class="border-bottom pb-1 red-border mb-4">LIVE</h2>
+            <h4 class="mb-4">Upcoming shows:</h4>
+            <p>COMING SOON</p>
+            <h4 class="mb-4">Past shows:</h4>
+            <p>2024-07-24 - The Moon - Cardiff</p>
+            <p>2024-01-05 - The Golden Lion - Bristol</p>
+            <p>2023-09-21 - Exchange - Bristol</p>
+            <p>2023-09-06 - The Moon - Cardiff</p>
+          </div>
+          <div class="col-0 col-lg-1">
+          </div>
+        </div>
+      </div>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
+  </body>
+</html>
