updating past shows

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <h4 class="mb-4">Upcoming shows:</h4>
             <p>COMING SOON</p>
             <h4 class="mb-4">Past shows:</h4>
+            <p>2024-12-02 - Fuel - Cardiff</p>
             <p>2024-07-24 - The Moon - Cardiff</p>
             <p>2024-01-05 - The Golden Lion - Bristol</p>
             <p>2023-09-21 - Exchange - Bristol</p>
